--- a/src/app/components/company/company.component.html
+++ b/src/app/components/company/company.component.html
@@ -1,1 +1,46 @@
-<p>company works!</p>
+<h1>Hello Company</h1>
+
+<h2>Coupons</h2>
+<select [(ngModel)]="category">
+	<option *ngFor="let cat of categories" [value]="cat.cat">{{cat.name}}</option>
+</select>
+<input type="number" [(ngModel)]="maxPrice" />
+
+<table class="table table-striped table-dark table-hover">
+	<thead class="thead-light">
+		<tr>
+			<th scope="col">Id</th>
+			<th scope="col">Title</th>
+			<th scope="col">Company Id</th>
+			<th scope="col">Category</th>
+			<th scope="col">Description</th>
+			<th scope="col">Start Date</th>
+			<th scope="col">End Date</th>
+			<th scope="col">Amount</th>
+			<th scope="col">Price</th>
+			<th scope="col">Image</th>
+			<th scope="col">Actions 
+				<button class="btn btn-primary ml-2" (click)="couponAddButton()"><fa-icon [icon]="createIcon"></fa-icon></button>
+			</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr *ngFor="let coupon of coupons">
+			<th scope="row">{{ coupon.id }}</th>
+			<td>{{ coupon.title }}</td>
+			<td>{{ coupon.companyId }}</td>
+			<td>{{ coupon.category }}</td>
+			<td>{{ coupon.description }}</td>
+			<td>{{ coupon.startDate }}</td>
+			<td>{{ coupon.endDate }}</td>
+			<td>{{ coupon.amount }}</td>
+			<td>{{ coupon.price }}</td>
+			<td><img class="img-thumbnail rounded" src="{{coupon.image}}"></td>
+			<td><button class="btn btn-danger ml-3" (click)="couponDeleteButton(coupon)"><fa-icon [icon]="deleteIcon"></fa-icon></button>
+				<button class="btn btn-warning ml-3" (click)="couponUpdateButton(coupon)"><fa-icon [icon]="updateIcon"></fa-icon></button></td>
+		</tr>
+	</tbody>
+</table>
+
+
+<app-alert></app-alert>
