--- a/src/app/components/modals/coupons-modal/coupons-modal.component.html
+++ b/src/app/components/modals/coupons-modal/coupons-modal.component.html
@@ -1,6 +1,6 @@
 <div>
-  <div class="modal-header" *ngIf="actionType==='Edit'">
-    <h4 class="modal-title" ngbPopover="You see, I show up on hover!" triggers="click:mouseleave" popoverTitle="Pop title">{{actionType}} Coupons</h4>
+  <div class="modal-header">
+    <h4 class="modal-title" ngbPopover="You see, I show up on hover!" triggers="click:mouseleave" popoverTitle="Pop title">View Coupons</h4>
     <button type="button" class="close" aria-label="Close" (click)="modal.dismiss()">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -21,9 +21,6 @@
 						<th scope="col">Amount</th>
 						<th scope="col">Price</th>
 						<th scope="col">Image</th>
-						<th scope="col" *ngIf="actionType==='Edit'">Actions 
-							<!-- <button class="btn btn-primary ml-2" (click)="couponAddButton()"><fa-icon [icon]="createIcon"></fa-icon></button> -->
-						</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -38,16 +35,13 @@
 						<td>{{ coupon.amount }}</td>
 						<td>{{ coupon.price }}</td>
 						<td><img class="img-thumbnail rounded" src="{{coupon.image}}"></td>
-						<td *ngIf="actionType==='Edit'"><button class="btn btn-danger ml-3" (click)="couponDeleteButton(coupon)"><fa-icon [icon]="deleteIcon"></fa-icon></button>
-							<button class="btn btn-warning ml-3" (click)="couponUpdateButton(coupon)"><fa-icon [icon]="updateIcon"></fa-icon></button></td>
 					</tr>
 				</tbody>
 			</table>
 
 		</div>
   </div>
-  <div class="modal-footer" *ngIf="actionType==='Edit'">
-		<button type="button" class="btn btn-danger" (click)="modal.dismiss()" >Cancel</button>
-    <button type="button" class="btn btn-primary" (click)="modal.close(coupons)">{{actionType}}</button>
+  <div class="modal-footer">
+		<button type="button" class="btn btn-danger" (click)="modal.dismiss()" >Close</button>
   </div>
 </div>
