--- a/src/app/components/company/company.component.html
+++ b/src/app/components/company/company.component.html
@@ -1,10 +1,20 @@
 <h1>Hello Company</h1>
 
 <h2>Coupons</h2>
-<select [(ngModel)]="category">
-	<option *ngFor="let cat of categories" [value]="cat.cat">{{cat.name}}</option>
-</select>
-<input type="number" [(ngModel)]="maxPrice" />
+<div class="form-row">
+	<div class="form-group col-md-2">
+		<label for="inputState">Category</label>
+		<select class="custom-select form-control" [(ngModel)]="category" (change)="onCategoryChange()">
+			<option *ngFor="let cat of categories" [value]="cat">{{cat}}</option>
+		</select>
+	</div>
+	<div class="form-group col-md-1">
+		<label for="inputState">Max Price</label>
+		<input type="number" class="form-control" [(ngModel)]="maxPrice" (change)="onMaxPriceChange()"/>
+	</div>
+	<button class="btn btn-primary m-2" (click)="filterCoupons()">Filter</button>
+	<button class="btn btn-primary m-2" (click)="resetFilters()">Reset</button>
+</div>
 
 <table class="table table-striped table-dark table-hover">
 	<thead class="thead-light">
