--- a/src/app/components/modals/coupons-modal/coupons-modal.component.html
+++ b/src/app/components/modals/coupons-modal/coupons-modal.component.html
@@ -34,7 +34,7 @@
 						<td>{{ coupon.endDate }}</td>
 						<td>{{ coupon.amount }}</td>
 						<td>{{ coupon.price }}</td>
-						<td><img class="img-thumbnail rounded" src="{{coupon.image}}"></td>
+						<td><img class="img-thumbnail rounded" [src]="coupon.image"></td>
 					</tr>
 				</tbody>
 			</table>
