--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,43 +1,42 @@
-<div>
-  <ul ngbNav #nav="ngbNav" class="nav-tabs">
-    <li ngbNavItem>
-      <a
-        ngbNavLink
-        [routerLink]="['/company']"
-        routerLinkActive="router-link-active"
-        >Company</a
-      >
-      <ng-template ngbNavContent>Company1</ng-template>
-    </li>
-    <li ngbNavItem>
-      <a
-        ngbNavLink
-        [routerLink]="['/customer']"
-        routerLinkActive="router-link-active"
-        >Customer</a
-      >
-      <ng-template ngbNavContent>Customer2</ng-template>
-    </li>
-    <li ngbNavItem>
-      <a
-        ngbNavLink
-        [routerLink]="['/admin']"
-        routerLinkActive="router-link-active"
-        >Admin</a
-      >
-      <ng-template ngbNavContent>Admin3</ng-template>
-    </li>
-    <div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
+  <button #toggler class="navbar-toggler" type="button" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+  (click)="toggleCollapse()">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" [ngClass]="isCollapsed?'show':''">
+    <ul ngbNav class="mr-auto" [ngClass]="isToggleVisible()?(isCollapsed?'d-block':''):''">
+      <li ngbNavItem>
+        <a ngbNavLink [routerLink]="['/coupons/1']" routerLinkActive="link-active">
+          Coupons
+        </a>
+      </li>
+      <li ngbNavItem>
+        <a ngbNavLink [routerLink]="['/company']" routerLinkActive="link-active">
+          Company
+        </a>
+      </li>
+      <li ngbNavItem>
+        <a ngbNavLink [routerLink]="['/customer']" routerLinkActive="link-active">
+          Customer
+        </a>
+      </li>
+      <li ngbNavItem>
+        <a ngbNavLink [routerLink]="['/admin']" routerLinkActive="link-active">
+          Admin
+        </a>
+      </li>
+    </ul>
+    <div class="my-2 form-inline my-lg-0">
       <div *ngIf="loginService.loginToken; else loginTemplate">
-        <button type="button" class="btn btn-warning" (click)="logout()">
+        <button type="button" class="btn btn-warning m-2" (click)="logout()">
           Logout
         </button>
       </div>
       <ng-template #loginTemplate>
-        <button type="button" class="btn btn-warning" [routerLink]="['/login']">
+        <button type="button" class="btn btn-warning m-2" [routerLink]="['/login']">
           Login
         </button>
       </ng-template>
     </div>
-  </ul>
-</div>
+  </div>
+</nav>
