--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" [ngClass]="isCollapsed?'show':''">
     <ul ngbNav class="mr-auto" [ngClass]="isToggleVisible()?(isCollapsed?'d-block':''):''">
       <li ngbNavItem>
-        <a ngbNavLink [routerLink]="['/coupons/1']" routerLinkActive="link-active">
+        <a ngbNavLink [routerLink]="['/coupons']" routerLinkActive="link-active">
           Coupons
         </a>
       </li>
