--- a/src/app/components/customer/customer.component.html
+++ b/src/app/components/customer/customer.component.html
@@ -1,1 +1,43 @@
-<p>customer works!</p>
+<h1>Hello {{customer.firstName}} {{customer.lastName}}</h1>
+
+<h2>Coupons</h2>
+<div class="form-row">
+	<div class="form-group col-md-2">
+		<label for="inputState">Category</label>
+		<select class="custom-select form-control" [(ngModel)]="category" (change)="onCategoryChange()">
+			<option *ngFor="let cat of categories" [value]="cat">{{cat}}</option>
+		</select>
+	</div>
+	<div class="form-group col-md-1">
+		<label for="inputState">Max Price</label>
+		<input type="number" class="form-control" [(ngModel)]="maxPrice" (change)="onMaxPriceChange()"/>
+	</div>
+	<!-- TODO button diet -->
+	<button class="btn btn-primary m-2" (click)="filterCoupons()">Filter</button>
+	<button class="btn btn-primary m-2" (click)="resetFilters()">Reset</button>
+</div>
+
+<table class="table table-striped table-dark table-hover">
+	<thead class="thead-light">
+		<tr>
+			<th scope="col">Title</th>
+			<th scope="col">Category</th>
+			<th scope="col">Description</th>
+			<th scope="col">Start Date</th>
+			<th scope="col">End Date</th>
+			<th scope="col">Price</th>
+			<th scope="col">Image</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr *ngFor="let coupon of coupons">
+			<th scope="col">{{ coupon.title }}</th>
+			<td>{{ coupon.category }}</td>
+			<td>{{ coupon.description }}</td>
+			<td>{{ coupon.startDate }}</td>
+			<td>{{ coupon.endDate }}</td>
+			<td>{{ coupon.price }}</td>
+			<td><img class="img-thumbnail rounded" src="{{coupon.image}}" /></td>
+		</tr>
+	</tbody>
+</table>
