--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,28 @@
-<p>footer works!</p>
+<footer class="page-footer bg-info mt-4 pt-3 rounded-top">
+
+	<div class="container-fluid text-center">
+		<div class="row justify-content-center">
+			<div class="col-auto">
+				<h5>Ido Zahavy Workshops</h5>
+				<p>Working on non-sense since 1994</p>
+				
+			</div>
+			<div class="col-auto">
+				<ul class="list-inline">
+					<li class="m-1 list-inline-item">
+						<a href="https://github.com/idozahavy" target="_blank"><img src="../../../assets/icons/GitHub-Mark-32px.png" /></a>
+					</li>
+					<li class="m-1 list-inline-item">
+						<a  href="https://www.linkedin.com/in/ido-zahavy-9066001a1/" target="_blank"><img width="32" src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Bug.svg.original.svg" /></a>
+					</li>
+					<li class="m-1 list-inline-item">
+						<a href="mailto:idozahavy@gmail.com" target="_blank"><img width="32" src="https://cdn4.iconfinder.com/data/icons/social-media-logos-6/512/112-gmail_email_mail-512.png"/></a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="footer-copyright bg-dark text-white text-center py-3">© 2077 Copyright:
+    <a href="https://github.com/idozahavy"> Ido Zahavy</a>
+  </div>
+</footer>
