--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<h2>Welcome to Ido's Coupon System</h2>
+	<h2 class="m-3">Welcome to Ido's Coupon System</h2>
 	
 	<ngb-carousel [interval]="8000" [pauseOnHover]="true" *ngIf="images">
 		<ng-template ngbSlide *ngFor="let image of images">
