--- a/src/app/components/customer/customer.component.html
+++ b/src/app/components/customer/customer.component.html
@@ -1,24 +1,23 @@
 <h1>Hello {{customer.firstName}} {{customer.lastName}}</h1>
 
 <h2>Coupons</h2>
-<div class="form-row">
-	<div class="form-group col-md-2">
+<div class="mx-auto form-row container">
+	<div class="form-group col-auto">
 		<label for="inputState">Category</label>
 		<select class="custom-select form-control" [(ngModel)]="category" (change)="onCategoryChange()">
 			<option *ngFor="let cat of categories" [value]="cat">{{cat}}</option>
 		</select>
 	</div>
-	<div class="form-group col-md-1">
+	<div class="form-group col-auto">
 		<label for="inputState">Max Price</label>
 		<input type="number" class="form-control" [(ngModel)]="maxPrice" (change)="onMaxPriceChange()"/>
 	</div>
-	<!-- TODO button diet -->
-	<button class="btn btn-primary m-2" (click)="filterCoupons()">Filter</button>
-	<button class="btn btn-primary m-2" (click)="resetFilters()">Reset</button>
+	<button class="btn btn-primary m-2 my-4 p-2" (click)="filterCoupons()">Filter</button>
+	<button class="btn btn-primary m-2 my-4 p-1" (click)="resetFilters()">Reset</button>
 </div>
 
 <table class="table table-striped table-dark table-hover">
-	<thead class="thead-light">
+	<thead>
 		<tr>
 			<th scope="col">Title</th>
 			<th scope="col">Category</th>
